logs/collective.recipe.ropeproject.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/recipe'...
Listing './lib/python3.5/site-packages/collective/recipe/ropeproject'...
Compiling './lib/python3.5/site-packages/collective/recipe/ropeproject/__init__.py'...
***   File "./lib/python3.5/site-packages/collective/recipe/ropeproject/__init__.py", line 30
    print self.address
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/collective/recipe/ropeproject/tests'...
Listing './lib/python3.5/site-packages/collective.recipe.ropeproject-1.0b3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rope'...
Listing './lib/python3.5/site-packages/rope/base'...
Listing './lib/python3.5/site-packages/rope/base/oi'...
Listing './lib/python3.5/site-packages/rope/base/oi/type_hinting'...
Listing './lib/python3.5/site-packages/rope/base/oi/type_hinting/providers'...
Listing './lib/python3.5/site-packages/rope/base/oi/type_hinting/resolvers'...
Listing './lib/python3.5/site-packages/rope/base/utils'...
Listing './lib/python3.5/site-packages/rope/contrib'...
Listing './lib/python3.5/site-packages/rope/refactor'...
Listing './lib/python3.5/site-packages/rope/refactor/importutils'...
Listing './lib/python3.5/site-packages/rope-0.10.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc/recipe'...
Listing './lib/python3.5/site-packages/zc/recipe/egg'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/zc.recipe.egg-2.0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
